# rlua

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/jit/: native_side_exit_resume_large.lua  numeric_descending_large.lua  numeric_sum_large.lua
crates/rlua-cli/: Cargo.toml
crates/rlua-cli/src/: main.rs
crates/rlua-cli/tests/: trace_inspect.rs
crates/rlua-compiler/: Cargo.toml
crates/rlua-compiler/src/: compiler.rs  lib.rs
crates/rlua-compiler/tests/: conformance.rs  differential.rs  hardening.rs  jit.rs  property.rs  property_support.rs
crates/rlua-core/: Cargo.toml
crates/rlua-core/src/: bytecode.rs  disasm.rs  function.rs  gc.rs  lib.rs  opcode.rs  table.rs  value.rs
crates/rlua-ir/: Cargo.toml
crates/rlua-ir/src/: lib.rs
crates/rlua-jit/: Cargo.toml
crates/rlua-jit/src/: executable.rs  lib.rs  x86_64.rs
crates/rlua-parser/: Cargo.toml
crates/rlua-parser/src/: ast.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/rlua-stdlib/: Cargo.toml
crates/rlua-stdlib/src/: coroutine_lib.rs  lib.rs  math.rs  string_lib.rs  table_lib.rs
crates/rlua-vm/: Cargo.toml
crates/rlua-vm/src/: lib.rs
docs/: architecture.md  release-candidate.md
openspec/changes/archive/2026-03-25-gc-full-baseline-semantics/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-bootstrap-lua-jit-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-27-m3-profiling-trace-recorder/: design.md  proposal.md  tasks.md
openspec/specs/: spec.md
openspec/specs/coroutine-support/: spec.md
openspec/specs/developer-documentation/: spec.md
openspec/specs/engineering-quality-gates/: spec.md
openspec/specs/gc-integration/: spec.md
openspec/specs/jit-performance-benchmarks/: spec.md
openspec/specs/lua-runtime-foundation/: spec.md
openspec/specs/metatable-dispatch/: spec.md
openspec/specs/release-candidate-readiness/: spec.md
openspec/specs/reliability-fuzzing/: spec.md
openspec/specs/standard-libraries/: spec.md
openspec/specs/trace-inspection-tooling/: spec.md
openspec/specs/tracing-jit-execution-pipeline/: spec.md
scripts/: validate-hardening.sh  validate-rc.sh  validate-required.sh
tests/conformance/: arithmetic.lua  booleans.lua  closures.lua  coroutine.lua  functions.lua  gc_stress.lua  generic_for.lua  globals.lua  if_else.lua  integration.lua  locals.lua  math_lib.lua  metatables.lua  multireturn.lua  numeric_for.lua  pcall.lua  recursion.lua  repeat.lua  scoping.lua  string_lib.lua  strings.lua  table_lib.lua  tables.lua  tailcalls.lua  while.lua  xpcall_errors.lua
tests/differential/: arithmetic.lua  coroutine.lua  error_handling.lua  metatables.lua  strings.lua  tables.lua
tests/fuzz/: README.md
tests/fuzz/corpus/compiler/: coroutine_wrap.lua  (+1 more)
tests/jit/: coroutine_interpreter_only.lua  guard_invalidation_recovery.lua  guard_string_seed.lua  native_side_exit_resume.lua  numeric_descending.lua  numeric_sum.lua  unsupported_table_loop.lua
(+45 files in other folders)
