[package]
name = "rlua-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rlua-core.workspace = true
rlua-parser.workspace = true

[dev-dependencies]
rlua-ir.workspace = true
rlua-jit.workspace = true
rlua-vm.workspace = true
rlua-stdlib.workspace = true
proptest.workspace = true
