[package]
name = "rlua-jit"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Diagnostic feature flags (inactive by default per engineering-quality-gates spec).
## Enable JIT pipeline tracing: logs hot loop detection, trace recording, compilation.
trace-jit = []
## Enable IR dump: prints IR trace contents after recording/optimization.
ir-dump = []

[dependencies]
rlua-ir.workspace = true
