[package]
name = "rlua-jit"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
## Diagnostic feature flags (inactive by default per engineering-quality-gates spec).
## Enable JIT pipeline tracing: logs hot loop detection, trace recording, compilation.
trace-jit = []
## Enable IR dump: prints IR trace contents after recording/optimization.
ir-dump = ["rlua-ir/ir-dump"]

[dependencies]
libc = "0.2"
rlua-core.workspace = true
rlua-ir.workspace = true
